# CompressX

./: .gitignore  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: cli-ci.yml
_archive/frontend/prisma/: schema.prisma
_archive/frontend/src/: middleware.ts
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: health.py  jobs.py  router.py
backend/app/compression/: base.py  pipeline.py
backend/app/compression/quantization/: gguf.py
backend/app/services/: huggingface.py  metrics.py  storage.py
backend/app/worker/: celery_app.py  tasks.py
compressx-cli/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
compressx-cli/src/commands/: benchmark.ts  compress.ts  hardware.ts  login.ts  models.ts  ollama-optimize.ts  preview.ts  scan.ts  uninstall.ts  update.ts
compressx-cli/src/core/: benchmark-report.ts  benchmark.ts  hardware-detect.ts  llama-cpp.ts  lmstudio-scanner.ts  (+12 more)
compressx-cli/tests/: benchmark-report.test.ts  benchmark.test.ts  lmstudio-scanner.test.ts  model-resolver.test.ts  ollama-blob-finder.test.ts  progress-quantize.test.ts  prompt-battery.test.ts  quant-compat.test.ts  update-notifier.test.ts  vram-optimizer.test.ts
compressx-mcp/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
compressx-mcp/src/: index.ts
frontend/: package-lock.json  package.json
frontend/public/: install.ps1  install.sh  uninstall.sh
frontend/src/: middleware.ts
infra/: docker-compose.yml
install/: install.ps1  install.sh  uninstall.ps1
(+43 files in other folders)
