[project]
name = "compressx-backend"
version = "0.1.0"
description = "CompressX - LLM Compression API Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "huggingface-hub>=0.25.0",
    "boto3>=1.35.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
ml = [
    "torch>=2.4.0",
    "transformers>=4.46.0",
    "sentencepiece>=0.2.0",
    "protobuf>=5.0.0",
    "datasets>=3.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100
